5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1649_2443.log
== SUBMITION (2019-04-09 01:19:30) 
-- CODE:
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c==1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- EXECUTION TIME:
0.215603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2443/main.py", line 4, in <module>
    v1=(4*pi*r**3)/3
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:23:51) 
-- CODE:
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*π*r**3)/3
v2=(π*x**2*(3*r-r))/3
if(c==1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v1=(4*π*r**3)/3
NameError: name 'π' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:31:49) 
-- CODE:
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*3.141592653589793*r**3)/3
v2=(3.141592653589793*x**2*(3*r-r))/3
if(c==1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:31:49) 
-- CODE:
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*3.141592653589793*r**3)/3
v2=(3.141592653589793*x**2*(3*r-r))/3
if(c==1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 01:31:51) 
-- CODE:
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*3.141592653589793*r**3)/3
v2=(3.141592653589793*x**2*(3*r-r))/3
if(c==1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- EXECUTION TIME:
0.225225
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
14.866
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 01:36:01) 
-- CODE:
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*3.141592653589793*r**3)/3
v2=(3.141592653589793*x**2*(3*r-r))/3
if(c==1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:31:32) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c==1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:32:28) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c==1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:36:18) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c==1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- EXECUTION TIME:
0.160961
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
14.866
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:41:46) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c==1):
	print(round(v1,4))
else:
	print(round(v2,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:42:53) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c==1):
	print(round(v2,4))
else:
	print(round(v1,4))
-- EXECUTION TIME:
0.116975
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
6.6157
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:44:20) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c==1):
	print(round(v2,4))
else:
	print(round(v1,4))
-- OUTPUT:
6.6157
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:55:17) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=int(input("1 ou 2:    "))
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c==1):
	print(round(v2,4))
else:
	print(round(v1-v2,4))
-- EXECUTION TIME:
0.140068
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
6.6157
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
295.4731
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:56:19) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c==1):
	print(round(v2,4))
else:
	print(round(v1-v2,4))
-- EXECUTION TIME:
0.138934
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
172.9787
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
295.4731
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:57:01) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c==1):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.145391
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
-172.9787
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-295.4731
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:57:20) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v1=(4*pi*r**3)/3
v2=(pi*x**2*(3*r-r))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.186442
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
6.6157
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-295.4731
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:58:10) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v1=(4*pi*r**3)/3
v2=(pi*(x**2)*(3*r-r))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.138645
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
6.6157
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-295.4731
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:58:43) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v1=(4*pi*r**3)/3
v2=(pi*(x**2)*(3*r-x))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.160259
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:58:56) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v1=(4*pi*r**3)/3
v2=(pi*(x**2)*(3*r-x))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.159391
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:59:21) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v1=(4*pi*r**3)/3
v2=(pi*(x**2)*(3*r-x))/3
if(c=="1"):
	print(round(v1,4))
else:
	print(round(v1-v2,4))
-- EXECUTION TIME:
0.216529
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:59:28) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v1=(4*pi*r**3)/3
v2=(pi*(x**2)*(3*r-x))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.168575
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:00:30) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v2=(pi*(x**2)*(3*r-x))/3
v1=((4*pi)*(r**3)/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.136149
-- ERROR:
  File "/home/codebench/codes/1649/2443/main.py", line 7
    if(c=="1"):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:00:32) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v2=(pi*(x**2)*(3*r-x))/3
v1=((4*pi)*(r**3)/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.141979
-- ERROR:
  File "/home/codebench/codes/1649/2443/main.py", line 7
    if(c=="1"):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:00:51) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v2=(pi*(x**2)*(3*r-x))/3
v1=((4*pi)*(r**3))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.131635
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:01:52) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v2=(pi*(x**2))*((3*r)-x)/3
v1=((4*pi)*(r**3))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.139705
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:01:56) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v2=(pi*(x**2))*((3*r)-x)/3
v1=((4*pi)*(r**3))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v2-v1,4))
-- EXECUTION TIME:
0.133478
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:02:23) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v2=(pi*(x**2))*((3*r)-x)/3
v1=((4*pi)*(r**3))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v1-v2,4))
-- EXECUTION TIME:
0.138286
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:50:58) 
-- CODE:
from math import*
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v2=(pi*(x**2))*((3*r)-x)/3
v1=((4*pi)*(r**3))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v1-v2,4));
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:51:20) 
-- CODE:

r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
v2=(pi*(x**2))*((3*r)-x)/3
v1=((4*pi)*(r**3))/3
from math import*
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v1-v2,4));
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v2=(pi*(x**2))*((3*r)-x)/3
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:51:50) 
-- CODE:

r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
from math import*
v2=(pi*(x**2))*((3*r)-x)/3
v1=((4*pi)*(r**3))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v1-v2,4));
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:51:58) 
-- CODE:

r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
from math import *
v2=(pi*(x**2))*((3*r)-x)/3
v1=((4*pi)*(r**3))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v1-v2,4));
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:01:48) 
-- CODE:
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
from math import *
v1=((4*pi)*(r**3))/3
v2=(pi*(x**2))*((3*r)-x)/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v1-v2,4));
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:08:40) 
-- CODE:
r=float(input("raio:   "))
x=float(input("altura:   "))
c=input("1 ou 2:    ")
from math import *
v1=((4*pi)*(r**3))/3
v2=(pi*(x**2))*((3*r)-x)/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v1-v2,4))
-- EXECUTION TIME:
0.144628
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
